--- a/curso-angular/src/app/app.component.html
+++ b/curso-angular/src/app/app.component.html
@@ -1,2 +1,8 @@
-<app-cursos></app-cursos>
+<!-- <app-cursos></app-cursos> -->
+
+<!-- <app-data-binding></app-data-binding> -->
+
+<!-- <app-event-binding></app-event-binding> -->
+
+<app-two-way-data-binding></app-two-way-data-binding>
 
